--- a/roles/mirror_registry/tasks/generate_certificate.yml
+++ b/roles/mirror_registry/tasks/generate_certificate.yml
@@ -26,6 +26,7 @@
   copy:
     src: '{{ helper.mirror_registry_dir }}/certs/domain.crt'
     dest: '/etc/pki/ca-trust/source/anchors/openshift-auto-upi.{{ mirror_registry.certificate.self_signed.common_name }}.crt'
+    remote_src: True
   register: new_certificate
   notify: Restart container-mirror-registry
   become: True
