--- a/roles/openshift_libvirt_fwcfg/tasks/deploy_hosts.yml
+++ b/roles/openshift_libvirt_fwcfg/tasks/deploy_hosts.yml
@@ -3,6 +3,7 @@
     uri: '{{ libvirt.libvirt_connection_uri }}'
     command: list_vms
   register: libvirt_vms
+  become: True
 
 - name: Define existing virtual machines
   set_fact:
